Creacion de home y acerca de, creacion de elementos de colores, integracion de icono

--- a/front-end/tutorial-canciones/angular.json
+++ b/front-end/tutorial-canciones/angular.json
@@ -32,7 +32,11 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/jquery/dist/jquery.slim.min.js"
+            ]
           },
           "configurations": {
             "production": {
