--- a/front-end/tutorial-canciones/package.json
+++ b/front-end/tutorial-canciones/package.json
@@ -21,6 +21,8 @@
     "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
+    "jquery": "^3.6.0",
+    "jquery-slim": "^3.0.0",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -31,6 +33,7 @@
     "@angular/cli": "~12.1.2",
     "@angular/compiler-cli": "~12.1.2",
     "@types/jasmine": "~3.8.0",
+    "@types/jquery": "^3.5.6",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
