--- a/front-end/tutorial-canciones/package.json
+++ b/front-end/tutorial-canciones/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
     "@auth0/angular-jwt": "^5.0.2",
+    "@types/faker": "^5.5.8",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
+    "faker": "^5.5.3",
     "ngx-toastr": "^14.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
