--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,6 +12,7 @@ jobs:
         uses: gsactions/commit-message-checker@v1
         with:
           pattern: "^RELEASE:*"
+          flags: "u"
           error: "The last push of this feature is not ready to be merged with the main branch."
   pruebas-flask:
     name: Pruebas Flask
